--- a/css/base.css
+++ b/css/base.css
@@ -31,6 +31,7 @@ min-height: 15px;
   outline: 1px solid black;
   position:relative;
   padding: 1px;
+   box-sizing: border-box;
 }
 
 .row01{grid-row: 1;}
@@ -142,6 +143,7 @@ a:focus {
   opacity: 1;
   visibility: visible;
 }
+
 
 
 
