--- a/css/tablet.css
+++ b/css/tablet.css
@@ -45,6 +45,7 @@
   max-height: 75%;
   max-width: 75%;
   object-fit: contain;
+  display: block;
   pointer-events: none;
 }
 
@@ -126,4 +127,5 @@
   word-break: break-word;
 
 }
+
 
