--- a/css/tablet.css
+++ b/css/tablet.css
@@ -39,6 +39,8 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  min-width: 0;
+  min-height: 0;
 }
 
 .portraits img {
@@ -127,5 +129,6 @@
   word-break: break-word;
 
 }
+
 
 
